fix overflow

--- a/static/css/zamboni/reviewers.less
+++ b/static/css/zamboni/reviewers.less
@@ -864,16 +864,10 @@ table.activity tr:first-child {
 
     .matched-rules-files {
         & > details {
-            overflow-x: auto;
-
             & > ul {
                 border-left: 2px solid #999;
                 padding-left: 4px;
                 margin-left: 2px;
-            }
-
-            & > ul > li > div {
-                white-space: nowrap;
             }
         }
 
